Added alts to the images.

--- a/Lab05/a11y-practical-task/main.html
+++ b/Lab05/a11y-practical-task/main.html
@@ -555,7 +555,7 @@
                                 <!-- Image -->
                                 <a href="#">
                                     <img class="card-img-top card-img-front"
-                                         src="./assets/img/site/croppedtop.png" width="253" height="300">
+                                         src="./assets/img/site/croppedtop.png" alt="purple cropped top" width="253" height="300">
                                 </a>
 
                                 <!-- Actions -->
@@ -603,7 +603,7 @@
                                 <!-- Image -->
                                 <a href="#">
                                     <img class="card-img-top card-img-front"
-                                         src="./assets/img/site/mididress.png" width="253" height="300">
+                                         src="./assets/img/site/mididress.png" alt="midi dress" width="253" height="300">
                                 </a>
 
                                 <!-- Actions -->
@@ -656,7 +656,7 @@
                             <div class="card-img">
                                 <!-- Image -->
                                 <a href="product.html">
-                                    <img class="card-img-top card-img-back" src="./assets/img/site/suedebag.png"
+                                    <img class="card-img-top card-img-back" src="./assets/img/site/suedebag.png" alt="suede bag"
                                          width="253" height="300">
                                 </a>
 
@@ -705,7 +705,7 @@
                                 <!-- Image -->
                                 <a href="product.html">
                                     <img class="card-img-top card-img-back"
-                                         src="./assets/img/site/alineskirt.png" width="253" height="300">
+                                         src="./assets/img/site/alineskirt.png" alt="aline skirt" width="253" height="300">
                                 </a>
 
                                 <!-- Actions -->
@@ -757,7 +757,7 @@
                                 <!-- Image -->
                                 <a href="#">
                                     <img class="card-img-top card-img-front"
-                                         src="./assets/img/site/strappysandals.png" width="253" height="300">
+                                         src="./assets/img/site/strappysandals.png" alt="strappy sandals" width="253" height="300">
                                 </a>
 
                                 <!-- Actions -->
@@ -828,7 +828,7 @@
                         <div class="row align-items-center mb-6">
                             <div class="col-4">
                                 <!-- Image -->
-                                <img src="./assets/img/site/smallsneakers.png" class="img-fluid" width="73"
+                                <img src="./assets/img/site/smallsneakers.png" alt="small gray Adidas sneakers with a white sole and black accents" class="img-fluid" width="73"
                                      height="73">
                             </div>
                             <div class="col-8 ml-n2">
@@ -889,7 +889,7 @@
                         <div class="row align-items-center mb-6">
                             <div class="col-4">
                                 <!-- Image -->
-                                <img src="./assets/img/site/cottondress.png" class="img-fluid" width="73"
+                                <img src="./assets/img/site/cottondress.png" alt="black cotton dress" class="img-fluid" width="73"
                                      height="73">
                             </div>
                             <div class="col-8 ml-n2">
@@ -952,7 +952,7 @@
                         <div class="row align-items-center mb-6">
                             <div class="col-4">
                                 <!-- Image -->
-                                <img src="./assets/img/site/tshirt.png" class="img-fluid" width="73" height="73">
+                                <img src="./assets/img/site/tshirt.png" alt="white t-shirt" class="img-fluid" width="73" height="73">
                             </div>
                             <div class="col-8 ml-n2">
                                 <!-- Preheading -->
@@ -1025,7 +1025,7 @@
                 <!-- Card -->
                 <div class="card mb-2">
                     <!-- Image -->
-                    <img src="./assets/img/products/product-16.jpg" class="card-img">
+                    <img src="./assets/img/products/product-16.jpg" alt="" class="card-img">
 
                     <!-- Overlay -->
                     <a class="card-img-overlay align-items-center bg-dark-40" href="#">
@@ -1040,7 +1040,7 @@
                 <div class="card mb-2">
 
                     <!-- Image -->
-                    <img src="./assets/img/products/product-17.jpg" class="card-img">
+                    <img src="./assets/img/products/product-17.jpg" alt="" class="card-img">
 
                     <!-- Overlay -->
                     <a class="card-img-overlay align-items-center bg-dark-40" href="#">
@@ -1056,7 +1056,7 @@
                 <div class="card mb-2">
 
                     <!-- Image -->
-                    <img src="./assets/img/products/product-18.jpg" class="card-img">
+                    <img src="./assets/img/products/product-18.jpg" alt="" class="card-img">
 
                     <!-- Overlay -->
                     <a class="card-img-overlay align-items-center bg-dark-40" href="#">
@@ -1071,7 +1071,7 @@
                 <div class="card mb-2">
 
                     <!-- Image -->
-                    <img src="./assets/img/products/product-19.jpg" class="card-img">
+                    <img src="./assets/img/products/product-19.jpg" alt="" class="card-img">
 
                     <!-- Overlay -->
                     <a class="card-img-overlay align-items-center bg-dark-40" href="#">
@@ -1089,7 +1089,7 @@
                 <div class="card">
 
                     <!-- Image -->
-                    <img src="./assets/img/products/product-20.jpg" class="card-img">
+                    <img src="./assets/img/products/product-20.jpg" alt="" class="card-img">
 
                     <!-- Overlay -->
                     <a class="card-img-overlay align-items-center bg-dark-40" href="#">
@@ -1106,7 +1106,7 @@
                 <div class="card">
 
                     <!-- Image -->
-                    <img src="./assets/img/products/product-21.jpg" class="card-img">
+                    <img src="./assets/img/products/product-21.jpg" alt="" class="card-img">
 
                     <!-- Overlay -->
                     <a class="card-img-overlay align-items-center bg-dark-40" href="#">
@@ -1118,34 +1118,34 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" alt="brands">
             <div class="col-4 col-sm-3 col-md text-center">
                 <!-- Brand -->
-                <img src="./assets/img/brands/gray-350/mango.svg" class="img-fluid mb-7 mb-md-0">
+                <img src="./assets/img/brands/gray-350/mango.svg" alt="mango"  class="img-fluid mb-7 mb-md-0">
             </div>
             <div class="col-4 col-sm-3 col-md text-center">
                 <!-- Brand -->
-                <img src="./assets/img/brands/gray-350/zara.svg" class="img-fluid mb-7 mb-md-0">
+                <img src="./assets/img/brands/gray-350/zara.svg" alt="zara" class="img-fluid mb-7 mb-md-0">
             </div>
             <div class="col-4 col-sm-3 col-md text-center">
                 <!-- Brand -->
-                <img src="./assets/img/brands/gray-350/reebok.svg" class="img-fluid mb-7 mb-md-0">
+                <img src="./assets/img/brands/gray-350/reebok.svg" alt="reebok" class="img-fluid mb-7 mb-md-0">
             </div>
             <div class="col-4 col-sm-3 col-md text-center">
                 <!-- Brand -->
-                <img src="./assets/img/brands/gray-350/asos.svg" class="img-fluid mb-7 mb-md-0">
+                <img src="./assets/img/brands/gray-350/asos.svg" alt="asos" class="img-fluid mb-7 mb-md-0">
             </div>
             <div class="col-4 col-sm-3 col-md text-center">
                 <!-- Brand -->
-                <img src="./assets/img/brands/gray-350/stradivarius.svg" class="img-fluid mb-6 mb-sm-0">
+                <img src="./assets/img/brands/gray-350/stradivarius.svg" alt="stradivarius" class="img-fluid mb-6 mb-sm-0">
             </div>
             <div class="col-4 col-sm-3 col-md text-center">
                 <!-- Brand -->
-                <img src="./assets/img/brands/gray-350/adidas.svg" class="img-fluid mb-6 mb-sm-0">
+                <img src="./assets/img/brands/gray-350/adidas.svg" alt="adidas" class="img-fluid mb-6 mb-sm-0">
             </div>
             <div class="col-4 col-sm-3 col-md text-center">
                 <!-- Brand -->
-                <img src="./assets/img/brands/gray-350/bershka.svg" class="img-fluid">
+                <img src="./assets/img/brands/gray-350/bershka.svg" alt="bershka" class="img-fluid">
             </div>
         </div>
     </div>
@@ -1180,7 +1180,7 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <!-- Heading -->
-                    <img src="./assets/img/site/logobw.png" width="205" height="81">
+                    <img src="./assets/img/site/logobw.png" alt="" width="205" height="81">
                 </div>
                 <div class="col-6 col-sm">
 
@@ -1243,12 +1243,12 @@
                     <div class="col-auto">
 
                         <!-- Payment methods -->
-                        <img class="footer-payment" src="./assets/img/payment/mastercard.svg">
-                        <img class="footer-payment" src="./assets/img/payment/visa.svg">
-                        <img class="footer-payment" src="./assets/img/payment/amex.svg">
-                        <img class="footer-payment" src="./assets/img/payment/paypal.svg">
-                        <img class="footer-payment" src="./assets/img/payment/maestro.svg">
-                        <img class="footer-payment" src="./assets/img/payment/klarna.svg">
+                        <img class="footer-payment" alt="mastercard" src="./assets/img/payment/mastercard.svg">
+                        <img class="footer-payment" alt="visa" src="./assets/img/payment/visa.svg">
+                        <img class="footer-payment" alt="amex" src="./assets/img/payment/amex.svg">
+                        <img class="footer-payment" alt="paypal" src="./assets/img/payment/paypal.svg">
+                        <img class="footer-payment" alt="maestro" src="./assets/img/payment/maestro.svg">
+                        <img class="footer-payment" alt="klarna" src="./assets/img/payment/klarna.svg">
 
                     </div>
                 </div>
