--- a/Lab05/a11y-practical-task/main.html
+++ b/Lab05/a11y-practical-task/main.html
@@ -369,10 +369,18 @@
                     <!-- Heading -->
                     <h2 class="mb-4 text-center">Top month Sellers</h2>
 
-                    <nav class="nav justify-content-center mb-10">
-                        <a class="nav-link active" href="#topSellersTab">Women</a>
-                        <a class="nav-link" href="#topSellersTab">Men</a>
-                        <a class="nav-link" href="#topSellersTab">Kids</a>
+                    <nav>
+                        <ul class="nav justify-content-center mb-10">
+                            <li>
+                                <a class="nav-link active" href="#topSellersTab">Women</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="#topSellersTab">Men</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="#topSellersTab">Kids</a>
+                            </li>
+                        </ul>
                     </nav>
                 </div>
             </div>
@@ -1172,11 +1180,12 @@
                         Support
                     </h6>
 
-                    <div><a class="text-gray-300"  href="#">Contact Us</a></div>
-                    <div><a class="text-gray-300"  href="#">FAQs</a></div>
-                    <div><a class="text-gray-300"  href="#">Size Guide</a></div>
-                    <div><a class="text-gray-300"  href="#">Shipping & Returns</a></div>
-
+                    <ul>
+                        <li><a class="text-gray-300"  href="#">Contact Us</a></li>
+                        <li><a class="text-gray-300"  href="#">FAQs</a></li>
+                        <li><a class="text-gray-300"  href="#">Size Guide</a></li>
+                        <li><a class="text-gray-300"  href="#">Shipping & Returns</a></li>
+                    </ul>
                 </div>
                 <div class="col-6 col-sm">
 
@@ -1185,11 +1194,12 @@
                         Shop
                     </h6>
 
-                    <div><a class="text-gray-300"  href="#">Men's Shopping</a></div>
-                    <div><a class="text-gray-300"  href="#">Women's Shopping</a></div>
-                    <div><a class="text-gray-300"  href="#">Kids' Shopping</a></div>
-                    <div><a class="text-gray-300"  href="#">Discounts</a></div>
-
+                    <ul>
+                        <li><a class="text-gray-300"  href="#">Men's Shopping</a></li>
+                        <li><a class="text-gray-300"  href="#">Women's Shopping</a></li>
+                        <li><a class="text-gray-300"  href="#">Kids' Shopping</a></li>
+                        <li><a class="text-gray-300"  href="#">Discounts</a></li>
+                    </ul>
                 </div>
                 <div class="col-6 col-sm">
 
@@ -1198,11 +1208,13 @@
                         Company
                     </h6>
 
-                    <div><a class="text-gray-300"  href="#">How we work</a></div>
-                    <div><a class="text-gray-300"  href="#">Achievements</a></div>
-                    <div><a class="text-gray-300"  href="#">Our Mission</a></div>
-                    <div><a class="text-gray-300"  href="#">Meet the Team</a></div>
-                    <div><a class="text-gray-300"  href="#">Web accessibility policy</a></div>
+                    <ul>
+                        <li><a class="text-gray-300"  href="#">How we work</a></li>
+                        <li><a class="text-gray-300"  href="#">Achievements</a></li>
+                        <li><a class="text-gray-300"  href="#">Our Mission</a></li>
+                        <li><a class="text-gray-300"  href="#">Meet the Team</a></li>
+                        <li><a class="text-gray-300"  href="#">Web accessibility policy</a></li>
+                    </ul>
 
                 </div>
                 <div class="col-6 col-sm">
@@ -1212,11 +1224,12 @@
                         Contact
                     </h6>
 
-                    <div><a class="text-gray-300"  href="#">Contact Us</a></div>
-                    <div><a class="text-gray-300"  href="#">Become a Dealer</a></div>
-                    <div><a class="text-gray-300"  href="#">+61 1234 567890</a></div>
-                    <div><a class="text-gray-300" href="#">hello@canaxess.com.au</a></div>
-
+                    <ul>
+                        <li><a class="text-gray-300"  href="#">Contact Us</a></li>
+                        <li><a class="text-gray-300"  href="#">Become a Dealer</a></li>
+                        <li><a class="text-gray-300"  href="#">+61 1234 567890</a></li>
+                        <li><a class="text-gray-300" href="#">hello@canaxess.com.au</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
