Fixed contrast problems.

--- a/Lab05/a11y-practical-task/main.html
+++ b/Lab05/a11y-practical-task/main.html
@@ -263,7 +263,7 @@
                 <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center">
 
                     <!-- Preheading -->
-                    <h6 class="heading-xxs mb-3 text-gray-400">
+                    <h6 class="heading-xxs mb-3 text-gray-450">
                         New Collection
                     </h6>
 
@@ -536,7 +536,7 @@
 
                                     <!-- Price -->
                                     <div class="font-weight-bold">
-                                        <span class="font-size-xs text-gray-350 text-decoration-line-through">$85.00</span>
+                                        <span class="font-size-xs text-gray-450 text-decoration-line-through">$85.00</span>
                                         <span class="text-primary">$85.00</span>
                                     </div>
                                 </div>
@@ -686,7 +686,7 @@
 
                                     <!-- Price -->
                                     <div class="font-weight-bold">
-                                        <span class="font-size-xs text-gray-350 text-decoration-line-through">$79.00</span>
+                                        <span class="font-size-xs text-gray-450 text-decoration-line-through">$79.00</span>
                                         <span class="text-primary">$49.00</span>
                                     </div>
                                 </div>
@@ -698,7 +698,7 @@
                                 <!-- Image -->
                                 <div class="card-img">
                                     <!-- Image -->
-                                    <a href="product.html" aria-label="Printed A-line Skirt">
+                                    <a href="#" aria-label="Printed A-line Skirt">
                                         <img class="card-img-top card-img-back"
                                              src="./assets/img/site/alineskirt.png" alt="Printed A-line Skirt" width="253" height="300">
                                     </a>
@@ -802,7 +802,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center">
                     <!-- Preheading -->
-                    <h6 class="heading-xxs mb-3 text-gray-400">
+                    <h6 class="heading-xxs mb-3 text-gray-450">
                         What buyers say
                     </h6>
 
