--- a/Lab05/a11y-practical-task/main.html
+++ b/Lab05/a11y-practical-task/main.html
@@ -14,7 +14,7 @@
         <div class="container">
             <!-- Promo -->
             <div class="mr-xl-8">
-                <i class="fe fe-truck mr-2"></i> <span class="heading-xxxs">Free shipping worldwide</span>
+                <i class="fe fe-truck mr-2"></i> <span class="heading-xxs">Free shipping worldwide</span>
             </div>
         </div>
     </aside>
@@ -171,9 +171,9 @@
                         <!-- Body -->
                         <div class="ml-6">
                             <!-- Heading -->
-                            <h6 class="heading-xxs mb-1">
+                            <div class="heading-xxs mb-1">
                                 Free shipping
-                            </h6>
+                            </div>
                             <!-- Text -->
                             <p class="mb-0 font-size-sm text-muted">
                                 From all orders over $100
@@ -192,9 +192,9 @@
                         <div class="ml-6">
 
                             <!-- Heading -->
-                            <h6 class="mb-1 heading-xxs">
+                            <div class="mb-1 heading-xxs">
                                 Free returns
-                            </h6>
+                            </div>
 
                             <!-- Text -->
                             <p class="mb-0 font-size-sm text-muted">
@@ -216,9 +216,9 @@
                         <div class="ml-6">
 
                             <!-- Heading -->
-                            <h6 class="mb-1 heading-xxs">
+                            <div class="mb-1 heading-xxs">
                                 Secure shopping
-                            </h6>
+                            </div>
 
                             <!-- Text -->
                             <p class="mb-0 font-size-sm text-muted">
@@ -240,9 +240,9 @@
                         <div class="ml-6">
 
                             <!-- Heading -->
-                            <h6 class="mb-1 heading-xxs">
+                            <div class="mb-1 heading-xxs">
                                 Over 10,000 Styles
-                            </h6>
+                            </div>
 
                             <!-- Text -->
                             <p class="mb-0 font-size-sm text-muted">
@@ -263,9 +263,9 @@
                 <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center">
 
                     <!-- Preheading -->
-                    <h6 class="heading-xxs mb-3 text-gray-450">
+                    <div class="heading-xxs mb-3 text-gray-450">
                         New Collection
-                    </h6>
+                    </div>
 
                     <!-- Heading -->
                     <h2 class="mb-4 h2BestPicks">Best Picks 2020</h2>
@@ -289,7 +289,7 @@
 
                             <div class="itemHeader">
                                 <!-- Heading -->
-                                <h4 class="mb-0">Bags Collection</h4>
+                                <h3 class="mb-0">Bags Collection</h3>
 
                                 <!-- Link -->
                                 <a class="btn btn-link stretched-link text-reset" href="#" aria-label="bags shop now">
@@ -313,7 +313,7 @@
 
                             <div class="itemHeader">
                                 <!-- Heading -->
-                                <h4 class="mb-0">Printed men’s Shirts</h4>
+                                <h3 class="mb-0">Printed men’s Shirts</h3>
 
                                 <!-- Link -->
                                 <a class="btn btn-link stretched-link px-0 text-reset" href="#" aria-label="printed men's shirts show now">
@@ -330,7 +330,7 @@
                         <div class="card-body my-auto px-md-10 text-center text-md-left">
                             <!-- Heading -->
                             <div class="itemHeader">
-                                <h4 class="mb-0">Basic women’s Dresses</h4>
+                                <h3 class="mb-0">Basic women’s Dresses</h3>
 
                                 <!-- Link -->
                                 <a class="btn btn-link stretched-link px-0 text-reset" href="#" aria-label="basic women's dresses shop now">
@@ -347,7 +347,7 @@
                         <div class="card-body my-auto text-center">
                             <!-- Heading -->
                             <div class="itemHeader">
-                                <h4 class="mb-0">Sweatshirts</h4>
+                                <h3 class="mb-0">Sweatshirts</h3>
 
                                 <!-- Link -->
                                 <a class="btn btn-link stretched-link text-reset" href="#" aria-label="sweatshirts shop now">
@@ -802,9 +802,9 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center">
                     <!-- Preheading -->
-                    <h6 class="heading-xxs mb-3 text-gray-450">
+                    <div class="heading-xxs mb-3 text-gray-450">
                         What buyers say
-                    </h6>
+                    </div>
 
                     <!-- Heading -->
                     <h2 class="mb-10">
@@ -1150,16 +1150,17 @@
                 <div class="col-12 col-md-10 col-lg-8 col-xl-6">
 
                     <!-- Heading -->
-                    <h5 class="mb-7 text-center text-white">Want the latest style ideas and fashion advice in your
+                    <h3 class="h5 mb-7 text-center text-white">Want the latest style ideas and fashion advice in your
                         inbox?
-                    </h5>
+                    </h3>
 
                     <!-- Form -->
                     <form class="mb-11">
                         <div class="form-row align-items-start">
                             <div class="col">
-                                <input type="email" class="form-control form-control-gray-700 form-control-lg"
-                                       placeholder="Enter Email *">
+                                    <input type="email"
+                                           class="form-control form-control-gray-700 form-control-lg"
+                                           placeholder="Enter Email *">
                             </div>
                             <div class="col-auto">
                                 <button type="submit" class="btn btn-gray-500 btn-lg">Subscribe</button>
@@ -1176,9 +1177,9 @@
                 <div class="col-6 col-sm">
 
                     <!-- Heading -->
-                    <h6 class="heading-xxs mb-4 text-white">
+                    <div class="heading-xxs mb-4 text-white">
                         Support
-                    </h6>
+                    </div>
 
                     <ul>
                         <li><a class="text-gray-300"  href="#" aria-label="contact us">Contact Us</a></li>
@@ -1190,9 +1191,9 @@
                 <div class="col-6 col-sm">
 
                     <!-- Heading -->
-                    <h6 class="heading-xxs mb-4 text-white">
+                    <div class="heading-xxs mb-4 text-white">
                         Shop
-                    </h6>
+                    </div>
 
                     <ul>
                         <li><a class="text-gray-300"  href="#" aria-label="men's shopping">Men's Shopping</a></li>
@@ -1204,9 +1205,9 @@
                 <div class="col-6 col-sm">
 
                     <!-- Heading -->
-                    <h6 class="heading-xxs mb-4 text-white">
+                    <div class="heading-xxs mb-4 text-white">
                         Company
-                    </h6>
+                    </div>
 
                     <ul>
                         <li><a class="text-gray-300"  href="#" aria-label="how we work">How we work</a></li>
@@ -1220,9 +1221,9 @@
                 <div class="col-6 col-sm">
 
                     <!-- Heading -->
-                    <h6 class="heading-xxs mb-4 text-white">
+                    <div class="heading-xxs mb-4 text-white">
                         Contact
-                    </h6>
+                    </div>
 
                     <ul>
                         <li><a class="text-gray-300"  href="#" aria-label="contact us">Contact Us</a></li>
