Skip button added.

--- a/Lab05/a11y-practical-task/main.html
+++ b/Lab05/a11y-practical-task/main.html
@@ -9,7 +9,11 @@
     <title>Store ACME Fashion House</title>
 </head>
 <body>
+
 <header>
+    <a class="skip-to-content-link" href="#main">
+        Skip to content
+    </a>
     <aside class="navbar navbar-topbar navbar-expand-xl navbar-light bg-light">
         <div class="container">
             <!-- Promo -->
@@ -85,7 +89,7 @@
     </nav>
 </header>
 
-<main>
+<main id="main">
     <!-- PROMO -->
     <aside class="py-3 bg-dark bg-pattern mb-4 promo">
         <div class="container">
