Maked fields required.

--- a/Lab05/a11y-practical-task/form.html
+++ b/Lab05/a11y-practical-task/form.html
@@ -123,7 +123,7 @@
 
             <label for="title">Title</label>
             <div class="form-group">
-              <select class="custom-select" id="title">
+              <select class="custom-select" id="title" required>
                 <option value="? string: ?"></option>
                 <option value="Mr">Mr</option>
                 <option value="Mrs">Mrs</option>
@@ -140,17 +140,17 @@
 
             <label for="first">First Name</label>
             <div class="form-group">
-              <input type="text" id="first" class="form-control" autocomplete="off">
+              <input type="text" id="first" class="form-control" autocomplete="off" required>
             </div>
 
             <label for="last">Last Name</label>
             <div class="form-group">
-              <input type="text" id="last" class="form-control" autocomplete="off" maxlength="40">
+              <input type="text" id="last" class="form-control" autocomplete="off" maxlength="40" required>
             </div>
 
             <label for="email">Email Address</label>
             <div class="form-group">
-              <input type="text" id="email" class="form-control" autocomplete="off">
+              <input type="text" id="email" class="form-control" autocomplete="off" required>
             </div>
 
             <div class="custom-control custom-checkbox form-group">
