--- a/Lab05/a11y-practical-task/form.html
+++ b/Lab05/a11y-practical-task/form.html
@@ -113,16 +113,15 @@
     <div class="container">
       <div class="row pb-7 border-bottom">
         <div class="col-12 col-md-6 col-lg-8">
-
           <h2 class="contactus" id="content">Create Account</h2>
           <p class="text-gray-500">
             Become an ACME privilege member and get access to exclusive early season fashion
           </p>
-
           <div class="border">
-
-            <label for="title">Title</label>
             <div class="form-group">
+              <div>
+                <label for="title">Title</label>
+              </div>
               <select class="custom-select" id="title" required>
                 <option value="? string: ?"></option>
                 <option value="Mr">Mr</option>
@@ -138,29 +137,28 @@
               </select>
             </div>
 
-            <label for="first">First Name</label>
-            <div class="form-group">
+            <fieldset class="form-group">
+              <label for="first">First Name</label>
               <input type="text" id="first" class="form-control" autocomplete="off" required>
-            </div>
+            </fieldset>
 
-            <label for="last">Last Name</label>
-            <div class="form-group">
+            <fieldset class="form-group">
+              <label for="last">Last Name</label>
               <input type="text" id="last" class="form-control" autocomplete="off" maxlength="40" required>
-            </div>
+            </fieldset>
 
-            <label for="email">Email Address</label>
-            <div class="form-group">
+            <fieldset class="form-group">
+              <label for="email">Email Address</label>
               <input type="text" id="email" class="form-control" autocomplete="off" required>
-            </div>
+            </fieldset>
 
-            <div class="custom-control custom-checkbox form-group">
+            <fieldset class="custom-control custom-checkbox form-group">
               <input type="checkbox" id="signup" class="custom-control-input">
               <label class="custom-control-label signup" for="signup">Signup to our newsletter</label>
-            </div>
+            </fieldset>
 
-            <p>Please indicate your shipping option preferences by selecting the relevant option</p>
-
-            <div class=" form-group">
+            <fieldset class="form-group">
+              <legend>Please indicate your shipping option preferences by selecting the relevant option</legend>
               <div class="custom-control custom-radio">
                 <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
                 <label class="custom-control-label" for="customRadio1">Standard 10 to 14 days</label>
@@ -174,7 +172,7 @@
                 <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
                 <label class="custom-control-label" for="customRadio3">3 workings days</label>
               </div>
-            </div>
+            </fieldset>
 
             <p>By creating an account, you acknowledge that you're aware that your personal data will be used in line with our <a href="#">Privacy Policy</a>. View our <a href="#">Customer Data Promise</a> for more information.</p>
 
